--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\kmana\AppData\Local\Temp\testng-eclipse--96447622\testng-customsuite.xml</span>
+                    <span>C:\Users\kmana\AppData\Local\Temp\testng-eclipse-252828334\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,7 +101,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.BinaryTreeCheckerTest" hash-for-method="isBinaryTree_Test1">isBinaryTree_Test1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.GraphColorTests" hash-for-method="colorGraphNode_Test1">colorGraphNode_Test1</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.GraphColorTests" hash-for-method="colorGraphNode_Test2">colorGraphNode_Test2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +124,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">practiceTests.BinaryTreeCheckerTest</span>
+              <span class="class-name">practiceTests.GraphColorTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="isBinaryTree_Test1">
-                  </a> <!-- isBinaryTree_Test1 -->
-                  <span class="method-name">isBinaryTree_Test1</span>
+                  <a name="colorGraphNode_Test1">
+                  </a> <!-- colorGraphNode_Test1 -->
+                  <span class="method-name">colorGraphNode_Test1</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="colorGraphNode_Test2">
+                  </a> <!-- colorGraphNode_Test2 -->
+                  <span class="method-name">colorGraphNode_Test2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +146,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\kmana\AppData\Local\Temp\testng-eclipse--96447622\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\kmana\AppData\Local\Temp\testng-eclipse-252828334\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +155,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;practiceTests.BinaryTreeCheckerTest&quot;/&gt;
+      &lt;class name=&quot;practiceTests.GraphColorTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -183,16 +195,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'isBinaryTree_Test1')
-data.setCell(0, 2, 'practiceTests.BinaryTreeCheckerTest')
-data.setCell(0, 3, 32);
+data.setCell(0, 1, 'colorGraphNode_Test1')
+data.setCell(0, 2, 'practiceTests.GraphColorTests')
+data.setCell(0, 3, 56);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'colorGraphNode_Test2')
+data.setCell(1, 2, 'practiceTests.GraphColorTests')
+data.setCell(1, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 32 ms</span>
+              <span class="suite-total-time">Total running time: 59 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,10 +234,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">practiceTests.BinaryTreeCheckerTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">practiceTests.GraphColorTests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">isBinaryTree_Test1</span>
+                <span class="method-name">colorGraphNode_Test1</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">colorGraphNode_Test2</span>
+                <span class="method-start">69 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
