--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b7f5ae">  <td>19/12/12 15:25:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BinaryTreeCheckerTest.isBinaryTree_Test1()[pri:0, instance:practiceTests.BinaryTreeCheckerTest@48eff760]">isBinaryTree_Test1</td> 
-  <td>main@1620303253</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>19/12/16 19:04:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GraphColorTests.colorGraphNode_Test1()[pri:0, instance:practiceTests.GraphColorTests@7c0e2abd]">colorGraphNode_Test1</td> 
+  <td>main@1833638914</td>   <td></td> </tr>
+<tr bgcolor="b7f5ae">  <td>19/12/16 19:04:15</td>   <td>66</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GraphColorTests.colorGraphNode_Test2()[pri:0, instance:practiceTests.GraphColorTests@7c0e2abd]">colorGraphNode_Test2</td> 
+  <td>main@1833638914</td>   <td></td> </tr>
 </table>
