--- a/test-output/index.html
+++ b/test-output/index.html
@@ -2,9 +2,10 @@
 
 <html>
   <head>
+  <meta charset='utf-8'>
   <title>TestNG reports</title>
 
-    <link type="text/css" href="testng-reports.css" rel="stylesheet" />  
+    <link type="text/css" href="testng-reports.css" rel="stylesheet" />
     <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="testng-reports.js"></script>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
@@ -48,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\kmana\AppData\Local\Temp\testng-eclipse-252828334\testng-customsuite.xml</span>
+                    <span>C:\Users\kmana\AppData\Local\Temp\testng-eclipse-37460264\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -101,12 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.GraphColorTests" hash-for-method="colorGraphNode_Test1">colorGraphNode_Test1</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.FibSeriesTests" hash-for-method="fibSeries_Test1">fibSeries_Test1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.GraphColorTests" hash-for-method="colorGraphNode_Test2">colorGraphNode_Test2</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.FibSeriesTests" hash-for-method="fibSeries_Test2">fibSeries_Test2</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="practiceTests.FibSeriesTests" hash-for-method="fibSeries_Test3">fibSeries_Test3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,21 +130,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">practiceTests.GraphColorTests</span>
+              <span class="class-name">practiceTests.FibSeriesTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="colorGraphNode_Test1">
-                  </a> <!-- colorGraphNode_Test1 -->
-                  <span class="method-name">colorGraphNode_Test1</span>
+                  <a name="fibSeries_Test1">
+                  </a> <!-- fibSeries_Test1 -->
+                  <span class="method-name">fibSeries_Test1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="colorGraphNode_Test2">
-                  </a> <!-- colorGraphNode_Test2 -->
-                  <span class="method-name">colorGraphNode_Test2</span>
+                  <a name="fibSeries_Test2">
+                  </a> <!-- fibSeries_Test2 -->
+                  <span class="method-name">fibSeries_Test2</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fibSeries_Test3">
+                  </a> <!-- fibSeries_Test3 -->
+                  <span class="method-name">fibSeries_Test3</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,16 +159,16 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\kmana\AppData\Local\Temp\testng-eclipse-252828334\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\kmana\AppData\Local\Temp\testng-eclipse-37460264\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Default suite&quot;&gt;
-  &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
+&lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;practiceTests.GraphColorTests&quot;/&gt;
+      &lt;class name=&quot;practiceTests.FibSeriesTests&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -195,20 +208,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'colorGraphNode_Test1')
-data.setCell(0, 2, 'practiceTests.GraphColorTests')
-data.setCell(0, 3, 56);
+data.setCell(0, 1, 'fibSeries_Test1')
+data.setCell(0, 2, 'practiceTests.FibSeriesTests')
+data.setCell(0, 3, 26);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'colorGraphNode_Test2')
-data.setCell(1, 2, 'practiceTests.GraphColorTests')
-data.setCell(1, 3, 3);
+data.setCell(1, 1, 'fibSeries_Test2')
+data.setCell(1, 2, 'practiceTests.FibSeriesTests')
+data.setCell(1, 3, 5);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'fibSeries_Test3')
+data.setCell(2, 2, 'practiceTests.FibSeriesTests')
+data.setCell(2, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 59 ms</span>
+              <span class="suite-total-time">Total running time: 33 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -234,14 +251,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">practiceTests.GraphColorTests</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">practiceTests.FibSeriesTests</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">colorGraphNode_Test1</span>
+                <span class="method-name">fibSeries_Test1</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">colorGraphNode_Test2</span>
-                <span class="method-start">69 ms</span>
+                <span class="method-name">fibSeries_Test2</span>
+                <span class="method-start">31 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">fibSeries_Test3</span>
+                <span class="method-start">44 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
